--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
+    <style>
+        div{
+            width: 200px;
+            height: 100px;
+            background-color: green;
+        }
+    </style>
 </head>
 <body>
-<div id="ok">ceci est un texte</div>
-<script>
-    var firstName = "Aziz";
-    alert(firstName);
-    document.getElementById("ok").innerHTML = document.getElementById("ok").innerHTML+firstName;
-</script>
-
+<div id="ok">ceci est un texte </div>
+<script src="js/main.js"></script>
 </body>
 </html>
