refactoring css with some responsive design using mediaQueries

--- a/index.html
+++ b/index.html
@@ -3,13 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <style>
-        div{
-            width: 200px;
-            height: 100px;
-            background-color: green;
-        }
-    </style>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet"  media="screen" href="css/main.css">
 </head>
 <body>
 <div id="ok">ceci est un texte </div>
