--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet"  media="screen" href="css/main.css">
 </head>
-<body>
+<body ng-app="ngFormationApp">
 <div id="ok">ceci est un texte </div>
 <script src="js/main.js"></script>
+<script src="js/angular.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
