--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet"  media="screen" href="css/main.css">
 </head>
 <body ng-app="ngFormationApp">
-<div id="ok">ceci est un texte </div>
-<script src="js/main.js"></script>
+
+<div ng-view></div>
+
 <script src="js/angular.js"></script>
+<script src="js/angular-route.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
