--- a/index.html
+++ b/index.html
@@ -4,14 +4,22 @@
     <meta charset="UTF-8">
     <title></title>
     <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+
     <link rel="stylesheet"  media="screen" href="css/main.css">
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+
 </head>
 <body ng-app="ngFormationApp">
-
-<div ng-view></div>
+<formation-menu></formation-menu>
+<div ng-view class="container"></div>
 
 <script src="js/angular.js"></script>
 <script src="js/angular-route.js"></script>
 <script src="js/app.js"></script>
+<script src="js/directives.js"></script>
+<script src="js/controllers.js"></script>
 </body>
 </html>
